message BtreeMetaData
{
  optional int32 root = 1;
  optional int32 first_leaf = 2;
  optional int32 last_leaf = 3;
  optional int32 last_node = 4;
  optional int32 leaf_count = 5;
  optional int32 node_count = 6;
  optional int32 leaf_max = 7;
  optional int32 node_max = 8;
  repeated int32 free_leaf_list = 9;
  repeated int32 free_node_list = 10;
  optional uint32 size = 11;
  optional int32 version = 12;
}
message NodeMetaData
{
  optional int32 id = 1;
  repeated int32 childrens = 2;
  repeated bytes keys = 3;
  optional bool removed = 4;
  optional int32 version = 5;
}
message LeafMetaData
{
  optional int32 id = 1;
  optional int32 next = 2;
  optional int32 prev = 3;
  repeated RecordMetaData records = 4;
  optional bool removed = 5;
  optional int32 version = 6;
}
message RecordMetaData
{
  optional bytes key = 1;
  optional bytes value = 2;
}
